--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <!-- =======================================================
-    Theme Name: Medilab
-    Theme URL: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
+ 
 </head>
 
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -55,7 +50,7 @@
             </div>
             <div class="banner-text text-center">
               <h1 class="white">Healthcare at your desk!!</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod <br>tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>Any Helath service , we are here to help you out <br>In an emergency you can rely on us.</p>
               <a href="#contact" class="btn btn-appoint">Make an Appointment.</a>
             </div>
             <div class="overlay-detail text-center">
@@ -74,7 +69,7 @@
         <div class="col-md-4 col-sm-4">
           <h2 class="ser-title">Our Service</h2>
           <hr class="botm-line">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris cillum.</p>
+          <p>We use our superior academic knowledge to treat a wide range of health issues, taking a personal touch and utilizing highly specialized and up-to-date research.</p>
         </div>
         <div class="col-md-4 col-sm-4">
           <div class="service-info">
@@ -83,7 +78,7 @@
             </div>
             <div class="icon-info">
               <h4>24 Hour Support</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>We are always with you in your hard times, just a call away , no matter the weather or traffic , we are always open 24*7.</p>
             </div>
           </div>
           <div class="service-info">
@@ -92,7 +87,7 @@
             </div>
             <div class="icon-info">
               <h4>Emergency Services</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>No worries in emergency with experinced Doctors and nurses we have you covered.</p>
             </div>
           </div>
         </div>
@@ -103,7 +98,7 @@
             </div>
             <div class="icon-info">
               <h4>Medical Counseling</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>Any problem or query , just come in and get a medical counselling resolving all queries in your mind , and it will be a secret between you and doctor .</p>
             </div>
           </div>
           <div class="service-info">
@@ -112,7 +107,7 @@
             </div>
             <div class="icon-info">
               <h4>Premium Healthcare</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>With expert care and service from Hospital staff , feel like home .</p>
             </div>
           </div>
         </div>
@@ -128,15 +123,21 @@
           <div class="col-md-4 col-sm-4 bor-left">
             <div class="mt-boxy-color"></div>
             <div class="medi-info">
-              <h3>Emergency Case</h3>
-              <p>I am text block. Edit this text from Appearance / Customize / Homepage header columns. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+              <h3>Heart Valve Disease</h3>
+              <p>n heart valve disease, one or more of the valves in your heart doesn't work properly.
+
+Your heart has four valves that keep blood flowing in the correct direction. In some cases, one or more of the valves don't open or close properly. This can cause the blood flow through your heart to your body to be disrupted.
+
+Your heart valve disease treatment depends on the heart valve affected and the type and severity of the valve disease. Sometimes heart valve disease requires surgery to repair or replace the heart valve.</p>
               <a href="#" class="medi-info-btn">READ MORE</a>
             </div>
           </div>
           <div class="col-md-4 col-sm-4">
             <div class="medi-info">
-              <h3>Emergency Case</h3>
-              <p>I am text block. Edit this text from Appearance / Customize / Homepage header columns. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+              <h3>Brain Tumour</h3>
+              <p>Having all of this subspecialized expertise in a single place, focused on you, means that you're not just getting one opinion — your care is discussed among the team, your test results are available quickly, appointments are scheduled in coordination, and the most highly specialized brain tumor experts in the world are all working together to determine what's best for you.
+
+                What might take months to accomplish elsewhere can typically be done in only a matter of days at Mayo Clinic.</p>
               <a href="#" class="medi-info-btn">READ MORE</a>
             </div>
           </div>
@@ -430,15 +431,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            © Copyright Medilab Theme. All Rights Reserved
-            <div class="credits">
-              <!--
-                All the links in the footer should remain intact.
-                You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Medilab
-              -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade.com</a>
+
             </div>
           </div>
         </div>
