--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="banner-text text-center">
               <h1 class="white">Healthcare at your desk!!</h1>
-              <p>Any Helath service , we are here to help you out <br>In an emergency you can rely on us.</p>
+              <p>Any Health service , we are here to help you out <br>In an emergency you can rely on us.</p>
               <a href="#contact" class="btn btn-appoint">Make an Appointment.</a>
             </div>
             <div class="overlay-detail text-center">
