--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@ Your heart valve disease treatment depends on the heart valve affected and the t
       <div class="row">
         <div class="col-md-3 col-sm-4 col-xs-12">
           <div class="section-title">
-            <h2 class="head-title lg-line">The Medilap <br>Ultimate Dream</h2>
+            <h2 class="head-title lg-line">Why Medilap <br></h2>
             <hr class="botm-line">
-            <p class="sec-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
+            <p class="sec-para">We are always with you , with our premium health care service and easy medical loan services are also available in the hospital itself..</p>
             <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
           </div>
         </div>
