--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Medilab Free Bootstrap HTML5 Template</title>
+  <title>Medilab</title>
   <meta name="description" content="Free Bootstrap Theme by BootstrapMade.com">
   <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
@@ -174,7 +174,7 @@ Your heart valve disease treatment depends on the heart valve affected and the t
       <div class="row">
         <div class="col-md-3 col-sm-4 col-xs-12">
           <div class="section-title">
-            <h2 class="head-title lg-line">Why Medilap <br></h2>
+            <h2 class="head-title lg-line">Why Medilab <br></h2>
             <hr class="botm-line">
             <p class="sec-para">We are always with you , with our premium health care service and easy medical loan services are also available in the hospital itself..</p>
             <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
