--- a/index.html
+++ b/index.html
@@ -185,15 +185,16 @@ Your heart valve disease treatment depends on the heart valve affected and the t
             <div class="more-features-box-text">
               <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
               <div class="more-features-box-text-description">
-                <h3>It's something important you want to know.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud.</p>
+                <h3>Cataract surgery was possible in the sixth century BC</h3>
+                <p>One of the oldest known medical textbooks is the Sushruta Samhita, written in Sanskrit in India. Its exact date is tentative, as no original version survives and it is only known from later copies, but the current consensus is that it was written in around 600 BC. Sushruta is thought to have been a physician and teacher working in the North Indian city of Benares (now Varanasi in the state of Uttar Pradesh). His Samhita – a compilation of knowledge – provides detailed information on medicine, surgery, pharmacology and patient management.</p>
               </div>
             </div>
             <div class="more-features-box-text">
               <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
               <div class="more-features-box-text-description">
-                <h3>It's something important you want to know.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud.</p>
+                <h3>General anaesthesia helped cancer patients at the beginning of the 19th century</h3>
+                <p>an Aiya, a 60-year-old woman, had lost many loved ones to breast cancer. She had seen her sisters die of the cruel disease, so when a tumour formed in her left breast she was well aware of the likely outcome. For her, however, there was a chance of survival – an operation. It was 1804 and she was in the best possible place for surgery – feudal Japan.</p>
+
               </div>
             </div>
           </div>
