--- a/index.html
+++ b/index.html
@@ -347,11 +347,11 @@ Your heart valve disease treatment depends on the heart valve affected and the t
         <div class="col-md-4 col-sm-4">
           <h3>Contact Info</h3>
           <div class="space"></div>
-          <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>321 Awesome Street<br> New York, NY 17022</p>
+          <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>76/2 Raja Ram Marg<br> Saket, India 110062</p>
           <div class="space"></div>
-          <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>info@companyname.com</p>
+          <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>info@medilabs.com</p>
           <div class="space"></div>
-          <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i>+1 800 123 1234</p>
+          <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i>+91 9234882390</p>
         </div>
         <div class="col-md-8 col-sm-8 marb20">
           <div class="contact-info">
@@ -397,7 +397,7 @@ Your heart valve disease treatment depends on the heart valve affected and the t
               <h4 class="white no-padding">About Us</h4>
             </div>
             <div class="info-sec">
-              <p>Praesent convallis tortor et enim laoreet, vel consectetur purus latoque penatibus et dis parturient.</p>
+              <p>HEALTHCARE AT YOUR DESK!! , we are always with you in your bad times</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-4 marb20">
