--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ Your heart valve disease treatment depends on the heart valve affected and the t
           <div class="thumbnail">
             <img src="img/doctor1.jpg" alt="..." class="team-img">
             <div class="caption">
-              <h3>Jessica Wally</h3>
+              <h3>Dr. Mayank Kapoor</h3>
               <p>Doctor</p>
               <ul class="list-inline">
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -229,7 +229,7 @@ Your heart valve disease treatment depends on the heart valve affected and the t
           <div class="thumbnail">
             <img src="img/doctor2.jpg" alt="..." class="team-img">
             <div class="caption">
-              <h3>Iai Donas</h3>
+              <h3>Dr. Smriti Chauhan</h3>
               <p>Doctor</p>
               <ul class="list-inline">
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -243,7 +243,7 @@ Your heart valve disease treatment depends on the heart valve affected and the t
           <div class="thumbnail">
             <img src="img/doctor3.jpg" alt="..." class="team-img">
             <div class="caption">
-              <h3>Amanda Denyl</h3>
+              <h3>Dr. Radhika Kashyap</h3>
               <p>Doctor</p>
               <ul class="list-inline">
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -257,7 +257,7 @@ Your heart valve disease treatment depends on the heart valve affected and the t
           <div class="thumbnail">
             <img src="img/doctor4.jpg" alt="..." class="team-img">
             <div class="caption">
-              <h3>Jason Davis</h3>
+              <h3>Dr. Vidhan Raj</h3>
               <p>Doctor</p>
               <ul class="list-inline">
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
