--- a/index.html
+++ b/index.html
@@ -282,37 +282,37 @@ Your heart valve disease treatment depends on the heart valve affected and the t
         <div class="col-md-4 col-sm-4">
           <div class="testi-details">
             <!-- Paragraph -->
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>The best hopitality that one can ever get , the best was Dr. Vidhan care , how he treated me and helped me.</p>
           </div>
           <div class="testi-info">
             <!-- User Image -->
             <a href="#"><img src="img/thumb.png" alt="" class="img-responsive"></a>
             <!-- User Name -->
-            <h3>Alex<span>Texas</span></h3>
+            <h3>Vikash<span></span></h3>
           </div>
         </div>
         <div class="col-md-4 col-sm-4">
           <div class="testi-details">
             <!-- Paragraph -->
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Easiest and fastest loan approval and really 24*7 doctors available for emergency which saved my brother from car accident.</p>
           </div>
           <div class="testi-info">
             <!-- User Image -->
             <a href="#"><img src="img/thumb.png" alt="" class="img-responsive"></a>
             <!-- User Name -->
-            <h3>Alex<span>Texas</span></h3>
+            <h3>Raj<span></span></h3>
           </div>
         </div>
         <div class="col-md-4 col-sm-4">
           <div class="testi-details">
             <!-- Paragraph -->
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Fastest service , helped me in my labour time.</p>
           </div>
           <div class="testi-info">
             <!-- User Image -->
             <a href="#"><img src="img/thumb.png" alt="" class="img-responsive"></a>
             <!-- User Name -->
-            <h3>Alex<span>Texas</span></h3>
+            <h3>Anusha<span></span></h3>
           </div>
         </div>
       </div>
@@ -328,8 +328,8 @@ Your heart valve disease treatment depends on the heart valve affected and the t
           <h2 class="section-title white lg-line">« A few words<br> about us »</h2>
         </div>
         <div class="col-md-4 col-sm-5">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a typek
-          <p class="text-right text-primary"><i>— Medilap Healthcare</i></p>
+          The leading hospital service and the best hospital in Delhi NCR
+          <p class="text-right text-primary"><i>— Times of India</i></p>
         </div>
         <div class="col-md-2"></div>
       </div>
